[package]
name = "aoc_program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
structopt = "0.3"
anyhow = "1.0"

[lib]
name = "aoc_program"
path = "src/lib.rs"

[[bin]]
name = "inputfinder"
path = "src/inputfinder.rs"

[[bin]]
name = "aoc_program"
path = "src/main.rs"
